fixed header spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,7 +44,8 @@ a:hover{
 }
 
 h1{
-  margin-bottom: 45px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   }
 .sign{
 margin-bottom: 10px
